# miraclewhiteknight

./: .gitignore  README.rst  meson.build  meson_options.txt
data/: meson.build  whiteknight.service.in
src/: autogen.c  common.c  common.h  file.c  file.h  handle.c  handle.h  init.c  init.h  list.c  list.h  log.c  log.h  main.c  manager.c  meson.build  tee.c  tee.h  verify.c  verify.h
src/ta/: Makefile  key.c  key.h  main.c  meson.build  object.c  object.h  sub.mk  user_ta_header_defines.h
